comfy/comfy.css
/* ... */
:root.visual-refresh.theme-darker, :root.theme-darker, :root.visual-refresh.theme-dark, :root.theme-dark {
  --background-primary: #23283d;
  --background-secondary: #1e2233;
  --background-secondary-alt: #191f2e;
  --background-tertiary: #101320;
  --background-accent: #9f72da;
  --background-brighter: #2d3550;

  --neutral-92: #1e2233;
  --neutral-86: #23283d;
  --background-base-lowest: #1e2233;
  --background-base-lower: #23283d;
  --chat-background-default: #191f2e;
  --background-surface-high: #191f2e;
  --background-gradient-high: #1e2233;
  
  /*The general accent color, if you want to have a different one 
  you have to modify the --red, --green and --blue vars.
  Why do I make it like that: as you can see in the src, having
  the opportunity to change the background color to anything
  leaves the possibility of hard readability. Thus changing the
  color of the text based on the perceived brightness makes it easier
  to read. this color gets represented by --accent-color-hsl
  */
  --red: 163;
  --green: 66;
  --blue: 93;
  --accent-color: rgb(var(--red), var(--green), var(--blue));
  --accent-color-alpha: rgba(var(--red), var(--green), var(--blue), 0.5);
  
  --threshold: 0.5;
  --r: calc(var(--red) * 0.2126);
  --g: calc(var(--green) * 0.7152);
  --b: calc(var(--blue) * 0.0722);
  --sum: calc(var(--r) + var(--g) + var(--b));
  --per-brightness: calc(var(--sum) / 255);
  --accent-color-hsl: hsl(0, 0%, calc((var(--per-brightness) - var(--threshold)) * -1000%));
  /* Src: https://css-tricks.com/switch-font-color-for-different-backgrounds-with-css/ */
  
  --modal-background: #23283d;
  --background-mobile-primary: #23283d;
  --background-mobile-secondary: #1e2233;
  --channeltextarea-background: #191f2e;
  --background-message-hover: transparent;
  --background-modifier-hover: #00000010;
  --background-modifier-active: #0000001a;
  --background-modifier-selected: #0000001f;
  --deprecated-card-bg: #12141f63;
  --background-floating: #101320;
  --deprecated-quickswitcher-input-background: #101320;
  --elevation-low: none;
  --scrollbar-auto-thumb: #121722;
  --scrollbar-auto-track: #191f2e;
  --scrollbar-thin-thumb: #141925;
  --activity-card-background: #101320;
  --input-background: #1e2233;
}
:root nav.guilds__5e434 .scroller-2TZvBN, :root nav.guilds__5e434 .scroller_ef3116 { padding-bottom: 0;}
:root .chat_f75fb0 .form_f75fb0 { padding-left: 16px;}
:root .chat_f75fb0 .form_f75fb0 .channelTextArea_f75fb0 .scrollableContainer__74017::after, :root .chat_f75fb0 .form_f75fb0 .wrapper__44df5::after { content: none;} 

.messageListItem__5126c {
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);

  position: relative;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}
.messageListItem__5126c:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #3e2f5091; /*Change this to change the color*/
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform-origin: 0 50%;
  transform-origin: 0 50%;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  border-radius: 20px;
  opacity: 30%;
}
.messageListItem__5126c:hover,
.messageListItem__5126c:focus,
.messageListItem__5126c:active {
  color: white;
}
.messageListItem__5126c:hover:before,
.messageListItem__5126c:focus:before,
.messageListItem__5126c:active:before {
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.cozy_c19a55 .headerText_c19a55 > .username_c19a55::before {
  content: ''; 
  width: calc(100% + 10px); 
  height: 100%;
  border-radius: 5px;
  background-color: currentColor; 
  opacity: 0.2; 
  position: absolute; 
  top: 0; 
  z-index: -1;
  left: -5px;
}
.cozy_c19a55 .headerText_c19a55 > .username_c19a55 {
  margin-left: 5px;
}

.typing_b88801 .text_b88801 { display: flex; align-items: center;}

.typing_b88801 .text_b88801 strong { 
  margin: 0 3px;
  line-height: 21px;
  animation: slideUp 300ms;
}
@keyframes slideUp {
  0% { margin-top: -50px;}
  100% { margin-top: 0;}
}

:root {  
  /* This isn't shown in my screenshot but I think it looks cool */
  /* --interactive-active: #6FD6A2; */
  
  /* channel colors */
  --hovering-over-channel: var(--background-mentioned);
  --channel-icon: var(--accent-color);
  --channel-text-area-placeholder: #6d728ab9;

  /* 1. when mentioning a channel bg color */
  --mention-background: var(--background-mentioned);

  /* 1. when pinged, foreground color */
  --mention-foreground: var(--main-color);

  /* 1. when pinged, background color  */
  --background-mentioned: #a3425d17;
  --background-mentioned-hover: #a3425d21;
  
  /* 2. color of message you're replying to */
  --background-message-highlight: var(--background-secondary-alt);

  /* 2. when hovering over a message you're replying to */
  --brand-experiment-10a: #a3425d21;

  /* outline of reactions */
  --brand-experiment: #a3425d49; 
  --brand-experiment-15a: var(--background-mentioned-hover);

  /* makes muted text color a little more blue */
  --interactive-muted: #565c7bb9;  
}

/* 1. changing the border color of in-chat mention + reply */
:root .mentioned__5126c::before { background-color: var(--main-color); }
:root .message__5126c::before { background-color: var(--main-color); }

/* 1. when hovering over channel mentions */
:root .channelMention:hover, .mention:hover { 
  text-decoration: none !important;
  color: var(--main-color);
  background-color: var(--background-mentioned-hover); 
}

/* 5. make bg of quick reacts transparent */
:root .customItem_c1e9c4 .button_f563df {
  background-color: transparent; 
}
/* ... */

